(split)bug: 19209 - Can't run HSM session
* Added isCurrent attribute to <volume> elements returned by
<GetVolumeRequest> and <GetAllVolumesRequest>.
* zmvolume -l now prints whether each volume is current or not.
* If no current secondary volume is defined, the <HsmRequest> handler
now tells the user whether there are no secondary volumes, or if
none are marked current.
* Reenabled old SOAP volume tests, now that we're able to create
directories from the test.  Added checks for modified values and
isCurrent.

--------

$ zmvolume -l
   Volume id: 2
        name: index1
        type: index
        path: /opt/zimbra/index
  compressed: false
     current: true

http://bugzilla.zimbra.com/show_bug.cgi?id=19209

Copied from Perforce
 Change: 64305